Hide horizontal overflow in the message container and break unbreakable words, resolves #73

--- a/src/javelin/apps/shieldcommand/static/shieldcommand/css/main.scss
+++ b/src/javelin/apps/shieldcommand/static/shieldcommand/css/main.scss
@@ -557,9 +557,11 @@ body {
 
 .chat-panel .chat-messages .message-container {
     margin-bottom: 10px;
+    overflow-x: hidden;
     padding: 0px 15px;
     text-align: left;
     width: 100%;
+    word-wrap: break-word;
 }
 
 .chat-panel .chat-messages .message-container .message-sender {
